--- a/index.html
+++ b/index.html
@@ -158,15 +158,13 @@
       </section>
 
       <section class="row workflow team">
-        <article class="text-div">
-          <h1 class="large-title">OUR TEAM STRUCTURE</h1>
+d
+          <h1 class="large-title" id="structure">OUR TEAM STRUCTURE</h1>
           <p class="text" id="text3">
-            <span class="satir" id="satir1_text3"
-              >VolTRan is more than the sum of its parts. Each sub-team plays a
+              VolTRan is more than the sum of its parts. Each sub-team plays a
               vital role:
-            </span>
           </p>
-        </article>
+
       </section>
 
       <section class="row workflow structure">
