--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ d
     <!-- <script src="src/console.js"></script> -->
     <script src="src/scroll.js"></script>
     <script src="src/clickActions.js"></script>
-    <script src="src/svg.js"></script>
+    <!-- <script src="src/svg.js"></script> -->
     <script src="src/star.js"></script>
   </body>
 </html>
