--- a/index.html
+++ b/index.html
@@ -158,44 +158,66 @@
       </section>
 
       <section class="row workflow team">
-d
+        <article class="text-div">
           <h1 class="large-title" id="structure">OUR TEAM STRUCTURE</h1>
           <p class="text" id="text3">
+            <span class="satir" id="satir1_text3">
               VolTRan is more than the sum of its parts. Each sub-team plays a
               vital role:
+            </span>
           </p>
-
+        </article>
       </section>
 
       <section class="row workflow structure">
         <div class="cards-wrapper">
-          <div class="card">
-            <img class="lion" src="/photos/photo2.png" />
-            <h3>Mechanical Team</h3>
-            <p>
-              12 members designing and building the robot using Fusion 360 &amp;
-              SolidWorks.
-            </p>
+          <div class="card" id="mechanic">
+            <div class="front" id="mechanic_front">
+              <img class="lion" src="/photos/photo2.png" />
+              <h3>Mechanical Team</h3>
+              <p>
+                12 members designing and building the robot using Fusion 360 &amp;
+                SolidWorks.
+              </p>
+            </div>
+            <div class="back" id="mechanic_back">
+              <span>Kürşat KILINÇARSLAN</span>
+            </div>
           </div>
-          <div class="card">
-            <img class="lion" src="/photos/photo3.png" />
-            <h3>Software Team</h3>
-            <p>Develops autonomous and driver-controlled systems in C++.</p>
+          <div class="card" id="software">
+            <div class="front" id="software_front">
+              <img class="lion" src="/photos/photo3.png" />
+              <h3>Software Team</h3>
+              <p>Develops autonomous and driver-controlled systems in C++.</p>
+            </div>
+            <div class="back" id="software_back">
+              <span>Kürşat KILINÇARSLAN</span>
+            </div>
           </div>
-          <div class="card">
-            <img class="lion" src="/photos/photo4.png" />
-            <h3>PR Team</h3>
-            <p>
-              Manages social media, outreach, and sponsorships to boost team
-              visibility.
-            </p>
+          <div class="card" id="pr">
+            <div class="front" id="pr_front">
+              <img class="lion" src="/photos/photo4.png" />
+              <h3>PR Team</h3>
+              <p>
+                Manages social media, outreach, and sponsorships to boost team
+                visibility.
+              </p>
+            </div>
+            <div class="back" id="pr_back">
+              <span>Kürşat KILINÇARSLAN</span>
+            </div>
           </div>
-          <div class="card">
-            <img class="lion" src="/photos/photo5.png" />
-            <h3>Drive Team</h3>
-            <p>
-              Our drive team have full control of the robot throughout the race.
-            </p>
+          <div class="card" id="drive">
+            <div class="front" id="drive_front">
+              <img class="lion" src="/photos/photo5.png" />
+              <h3>Drive Team</h3>
+              <p>
+                Our drive team have full control of the robot throughout the race.
+              </p>
+            </div>
+            <div class="back" id="drive_back">
+              <span>Kürşat KILINÇARSLAN</span>
+            </div>
           </div>
         </div>
       </section>
