Co-authored-by: YusufCidik <YusufCidik@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             >
             <span class="satir" id="satir2_text2"
               >world engineering and product development cycles. We
-              operate</span
+              operate</span 
             >
             <span class="satir" id="satir3_text2"
               >under a five-step iterative model:</span
@@ -157,7 +157,7 @@
         <div class="svgObject" id="object1"></div>
       </section>
 
-      <section class="row workflow team">
+      <section class="row workflow team"> 
         <article class="text-div">
           <h1 class="large-title" id="structure">OUR TEAM STRUCTURE</h1>
           <p class="text" id="text3">
@@ -172,51 +172,59 @@
       <section class="row workflow structure">
         <div class="cards-wrapper">
           <div class="card" id="mechanic">
-            <div class="front" id="mechanic_front">
-              <img class="lion" src="/photos/photo2.png" />
-              <h3>Mechanical Team</h3>
-              <p>
-                12 members designing and building the robot using Fusion 360 &amp;
-                SolidWorks.
-              </p>
-            </div>
-            <div class="back" id="mechanic_back">
-              <span>Kürşat KILINÇARSLAN</span>
+            <div class="card-inner">
+              <div class="card-front" id="mechanic_front">
+                <img class="lion" src="/photos/photo2.png" />
+                <h3>Mechanical Team</h3>
+                <p>
+                  12 members designing and building the robot using Fusion 360 &amp;
+                  SolidWorks.
+                </p>
+              </div>
+              <div class="card-back"  id="mechanic_back">
+                <span>Kürşat KILINÇARSLAN</span>
+              </div>
             </div>
           </div>
           <div class="card" id="software">
-            <div class="front" id="software_front">
-              <img class="lion" src="/photos/photo3.png" />
-              <h3>Software Team</h3>
-              <p>Develops autonomous and driver-controlled systems in C++.</p>
-            </div>
-            <div class="back" id="software_back">
-              <span>Kürşat KILINÇARSLAN</span>
+            <div class="card-inner">
+              <div class="card-front" id="software_front">
+                <img class="lion" src="/photos/photo3.png" />
+                <h3>Software Team</h3>
+                <p>Develops autonomous and driver-controlled systems in C++.</p>
+              </div>
+              <div class="card-back" id="software_back">
+                <span>Kürşat KILINÇARSLAN</span>
+              </div>
             </div>
           </div>
           <div class="card" id="pr">
-            <div class="front" id="pr_front">
-              <img class="lion" src="/photos/photo4.png" />
-              <h3>PR Team</h3>
-              <p>
-                Manages social media, outreach, and sponsorships to boost team
-                visibility.
-              </p>
-            </div>
-            <div class="back" id="pr_back">
-              <span>Kürşat KILINÇARSLAN</span>
+            <div class="card-inner">
+              <div class="card-front" id="pr_front">
+                <img class="lion" src="/photos/photo4.png" />
+                <h3>PR Team</h3>
+                <p>
+                  Manages social media, outreach, and sponsorships to boost team
+                  visibility.
+                </p>
+              </div>
+              <div class="card-back" id="pr_back">
+                <span>Kürşat KILINÇARSLAN</span>
+              </div>
             </div>
           </div>
           <div class="card" id="drive">
-            <div class="front" id="drive_front">
-              <img class="lion" src="/photos/photo5.png" />
-              <h3>Drive Team</h3>
-              <p>
-                Our drive team have full control of the robot throughout the race.
-              </p>
-            </div>
-            <div class="back" id="drive_back">
-              <span>Kürşat KILINÇARSLAN</span>
+            <div class="card-inner">
+              <div class="card-front" id="drive_front">
+                <img class="lion" src="/photos/photo5.png" />
+                <h3>Drive Team</h3>
+                <p>
+                  Our drive team have full control of the robot throughout the race.
+                </p>
+              </div>
+              <div class="card-back" id="drive_back">
+                <span>Kürşat KILINÇARSLAN</span>
+              </div>
             </div>
           </div>
         </div>
@@ -227,11 +235,6 @@
         <figure class="gear-canvas-wrapper2" id="gear-wrapper2"></figure>
       </section>
     </main>
-
-    <!-- FOOTER (Opsiyonel olarak eklenebilir) -->
-    <footer>
-      <div class="space"></div>
-    </footer>
 
     <!-- JS -->
     <script src="src/indexedDB.js"></script>
