--- a/index.html
+++ b/index.html
@@ -160,12 +160,6 @@
       <section class="row workflow team"> 
         <article class="text-div">
           <h1 class="large-title" id="structure">OUR TEAM STRUCTURE</h1>
-          <p class="text" id="text3">
-            <span class="satir" id="satir1_text3">
-              VolTRan is more than the sum of its parts. Each sub-team plays a
-              vital role:
-            </span>
-          </p>
         </article>
       </section>
 
@@ -228,6 +222,25 @@
             </div>
           </div>
         </div>
+      </section>
+
+      <section class="row frc">
+        <article class="text-div">
+          <h1 class="large-title" id="mission">COMPETITIONS</h1>
+          <p class="text" id="text3">
+            <span class="satir" id="satir1_text3">FIRST Robotics Competition (FRC): A global program that combines the excitement of sport with the rigors of science and technology. FRC pushes us to solve real-world engineering challenges while promoting gracious professionalism. Each season, teams of students and mentors design, build, and program industrial-sized robots to compete in a themed game, requiring not only technical expertise but also creativity, teamwork, and strategic thinking. Beyond the competition itself, FRC fosters innovation, leadership, and collaboration, preparing students for future careers in STEM while building a strong sense of community and global connection.</span>
+          </p>
+        </article>
+      </section>
+
+      <section class="row vrc">
+        <article class="text-div">
+          <h1 class="large-title" id="mission">COMPETITIONS</h1>
+          <p class="text" id="text3">
+            <span class="satir" id="satir1_text4">VEX Robotics Competition (VRC):
+The largest and fastest-growing robotics competition in the world. VEX allows us to develop competitive robots within strict design constraints, encouraging creativity and resilience.</span>
+          </p>
+        </article>
       </section>
 
       <!-- GEARS SHOWCASE -->
