--- a/index.html
+++ b/index.html
@@ -71,7 +71,12 @@
     <section class="row about">
       <aside>
         <a href="https://www.instagram.com/voltranrobotics/" target="_blank" draggable="false">
-          <img class="instagram" id="photo1" src="/SVG/insta.svg" alt="Instagram Icon" draggable="false" /></a>
+          <img class="instagram" id="photo1" src="/SVG/insta.svg" alt="Instagram Icon" draggable="false" />
+        </a>
+        <a href="https://www.instagram.com/voltranrobotics/" target="_blank" draggable="false">
+          <img class="instagram" id="photo2" src="/SVG/insta.svg" alt="Instagram Icon" draggable="false" />
+        </a>
+      
       </aside>
       <article class="text-div">
         <h1 class="large-title">WHO WE ARE?</h1>
@@ -136,7 +141,20 @@
               </p>
             </div>
             <div class="card-back" id="mechanic_back">
-              <span>Kürşat KILINÇARSLAN</span>
+              <span>
+                Rüzgar ÖZDEMİR<br>
+                Nur Efşan ŞERİN<br>
+                Çiğdem SELALMAZ<br>
+                Berra ABBASOĞLU<br>
+                Ege SİKER<br>
+                İlker Cem DEMİRCİ<br>
+                Yiğit AYDIN<br>
+                Ahmet Kaan KARAASLAN<br>
+                Burak TUR<br>
+                Kürşat KILINÇARSLAN<br>
+                Mehmet Fatih KAHRİMAN<br>
+                Ulaş Doğa GÖÇENER<br>
+              </span>
             </div>
           </div>
         </div>
@@ -148,7 +166,11 @@
               <p>Develops autonomous and driver-controlled systems in C++.</p>
             </div>
             <div class="card-back" id="software_back">
-              <span>Kürşat KILINÇARSLAN</span>
+              <span>
+                Ahmet Rıfat ÖZTÜRK<br>
+                Kürşat KILINÇARSLAN<br>
+                Ulaş Doğa GÖÇENER<br>
+              </span>
             </div>
           </div>
         </div>
@@ -163,7 +185,18 @@
               </p>
             </div>
             <div class="card-back" id="pr_back">
-              <span>Kürşat KILINÇARSLAN</span>
+              <span>
+                Nur Efşan ŞERİN<br>
+                Zeynep Rana ÖZDEMİR<br>
+                Asya Hilal AKAY<br>
+                Ayşe Bahar ÖZTÜRK<br>
+                Azra ARAS<br>
+                Ege ALPASLAN<br>
+                Miray KIZILENİŞ<br>
+                Habibe Nisa ÇİMEN<br>
+                Helin ALAHMAD<br>
+                Tuba Meryem AYAR<br>
+              </span>
             </div>
           </div>
         </div>
@@ -177,7 +210,10 @@
               </p>
             </div>
             <div class="card-back" id="drive_back">
-              <span>Kürşat KILINÇARSLAN</span>
+              <span>
+                İlker Cem DEMİRCİ<br>
+                Ulaş Doğa GÖÇENER
+              </span>
             </div>
           </div>
         </div>
@@ -208,7 +244,7 @@
         </p>
       </article>
       <div id="frc">
-
+        <img src="/photos/photo9.png" style="width: 250px; height: auto;"/>
       </div>
     </section>
 
@@ -245,6 +281,50 @@
       </article>
     </section>
 
+    <section class="row trophies">
+      <div class="container">
+        <div class="trophy-item">
+          <img src="/photos/photo11.png" alt="Küçük" class="small">
+          <p>2023 VRC Turkey Quarter Finalist</p>
+        </div>
+        <div class="trophy-item">
+          <img src="/photos/photo11.png" alt="Orta" class="medium">
+          <p>2024 VRC Innovation Award</p>
+        </div>
+        <div class="trophy-item">
+          <img src="/photos/photo11.png" alt="Büyük" class="large">
+          <p>2022 Istanbul Regional Champion</p>
+        </div>
+
+        <!-- ORTA (tam merkezde) -->
+        <div class="trophy-item center">
+          <img src="/photos/photo12.png" 
+               alt="Çok Büyük" class="xlarge">
+          <p>2019 FRC Istanbul Champion</p>
+        </div>
+
+        <div class="trophy-item">
+          <img src="/photos/photo13.png" 
+               alt="Büyük" class="xmedium">
+          <p>2019 FRC Amerika Quarter Final</p>
+        </div>
+        <div class="trophy-item">
+          <img src="/photos/photo11.png" alt="Orta" class="medium r">
+          <p>2024 VRC Innovation Award</p>
+        </div>
+        <div class="trophy-item">
+          <img src="/photos/photo11.png" alt="Küçük" class="small r">
+          <p>2023 VRC Turkey Quarter Finalist</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="row sponsorship">
+      <article>
+        <h1 class="large-title">SPONSORSHIP</h1>
+      </article>
+    </section>
+
     <!-- GEARS SHOWCASE -->
     <section class="row">
       <figure class="gear-canvas-wrapper2" id="gear-wrapper2"></figure>
@@ -261,5 +341,4 @@
   <!-- <script src="src/svg.js"></script> -->
   <script src="src/star.js"></script>
 </body>
-
 </html>
