--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 
             <a href="#start">
-              <img class="logo" id="logo" src="/SVG/voltranLogo.svg" alt="Voltran Robotics Logo" /></a>
+              <img class="logo" id="logo" src="SVG/voltranLogo.svg" alt="Voltran Robotics Logo" /></a>
             <a href="#start">
               <h1 class="logo-title" id="logo-title">VOLTRAN ROBOTICS</h1>
             </a>
@@ -93,10 +93,10 @@
           <aside>
             <div class="insta-post">
               <a href="https://www.instagram.com/voltranrobotics/" target="_blank" draggable="false">
-                <img class="instagram" id="photo1" src="/SVG/insta.svg" alt="Instagram Icon" draggable="false" />
+                <img class="instagram" id="photo1" src="SVG/insta.svg" alt="Instagram Icon" draggable="false" />
               </a>
               <a href="https://www.instagram.com/voltranrobotics/" target="_blank" draggable="false">
-                <img class="instagram" id="photo2" src="/SVG/insta.svg" alt="Instagram Icon" draggable="false" />
+                <img class="instagram" id="photo2" src="SVG/insta.svg" alt="Instagram Icon" draggable="false" />
               </a>
             </div>
           </aside>
@@ -120,7 +120,7 @@
               <div class="card" id="mechanic">
                 <div class="card-inner">
                   <div class="card-front" id="mechanic_front">
-                    <img class="lion" src="/photos/photo2.png" />
+                    <img class="lion" src="photos/photo2.png" />
                     <h3>Mechanical Team</h3>
                     <p>
                       12 members designing and building the robot using Fusion 360 &amp;
@@ -145,7 +145,7 @@
               <div class="card" id="software">
                 <div class="card-inner">
                   <div class="card-front" id="software_front">
-                    <img class="lion" src="/photos/photo3.png" />
+                    <img class="lion" src="photos/photo3.png" />
                     <h3>Software Team</h3>
                     <p>Develops autonomous and driver-controlled systems in C++.</p>
                   </div>
@@ -161,7 +161,7 @@
               <div class="card" id="pr">
                 <div class="card-inner">
                   <div class="card-front" id="pr_front">
-                    <img class="lion" src="/photos/photo4.png" />
+                    <img class="lion" src="photos/photo4.png" />
                     <h3>PR Team</h3>
                     <p>
                       Manages social media, outreach, and sponsorships to boost team
@@ -187,7 +187,7 @@
               <div class="card" id="drive">
                 <div class="card-inner">
                   <div class="card-front" id="drive_front">
-                    <img class="lion" src="/photos/photo5.png" />
+                    <img class="lion" src="photos/photo5.png" />
                     <h3>Drive Team</h3>
                     <p>
                       Our drive team have full control of the robot throughout the race.
