--- a/index.html
+++ b/index.html
@@ -2,7 +2,30 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />,
+  <meta name="theme-color" content="#0e0e0e">
+
+  <title>Voltran Robotics | Pertevniyal Lisesi Robotik Takımı</title>
+  <meta name="description" content="Voltran Robotics, Pertevniyal Lisesi'nin resmi robotik takımıdır. FRC ve VEX yarışmalarında geleceği inşa eden genç mühendisler, yazılımcılar ve liderler.">
+  <meta name="keywords" content="Voltran Robotics, robotik, yapay zeka, FRC, VEX Robotics, Pertevniyal Lisesi, teknoloji, mühendislik, yazılım">
+  <meta name="author" content="Voltran Robotics Team">
+  <meta name="robots" content="index, follow">
+
+  <meta name="google-site-verification" content="9nYa0BeGYrJpy4SZK91Qef51Ss8kLaZqzyntGX7n58A">
+
+  <meta property="og:title" content="Voltran Robotics">
+  <meta property="og:description" content="Pertevniyal Lisesi'nin resmi robotik takımı Voltran Robotics, FRC ve VEX yarışmalarında geleceği inşa ediyor.">
+  <meta property="og:image" content="photos/photo18.png">
+  <meta property="og:url" content="https://voltranrobotics.tech">
+  <meta property="og:type" content="website">
+  <meta property="og:locale" content="tr_TR">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Voltran Robotics | Pertevniyal Lisesi Robotik Takımı">
+  <meta name="twitter:description" content="Genç mühendisler ve yazılımcılarla geleceği inşa eden Voltran Robotics.">
+  <meta name="twitter:image" content="photos/photo18.png">
+
+  <link rel="icon" href="SVG/voltranLogo.svg" type="image/svg+xml">
   <link rel="stylesheet" href="style.css" />
   <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/build/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
