--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />,
   <meta name="theme-color" content="#0e0e0e">
+  <link rel="icon" href="SVG/voltranLogo.svg" type="image/svg+xml">
 
   <title>Voltran Robotics | Pertevniyal Lisesi Robotik Takımı</title>
   <meta name="description" content="Voltran Robotics, Pertevniyal Lisesi'nin resmi robotik takımıdır. FRC ve VEX yarışmalarında geleceği inşa eden genç mühendisler, yazılımcılar ve liderler.">
