--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="theme-color" content="#0e0e0e">
   <link rel="icon" href="SVG/voltranLogo2.svg" type="image/svg+xml">
 
-  <title>Voltran Robotics | Pertevniyal Lisesi Robotik Takımı</title>
+  <title>Voltran Robotics</title>
   <meta name="description" content="Voltran Robotics, Pertevniyal Lisesi'nin resmi robotik takımıdır. FRC ve VEX yarışmalarında geleceği inşa eden genç mühendisler, yazılımcılar ve liderler.">
   <meta name="keywords" content="Voltran Robotics, robotik, yapay zeka, FRC, VEX Robotics, Pertevniyal Lisesi, teknoloji, mühendislik, yazılım">
   <meta name="author" content="Voltran Robotics Team">
