--- a/index.html
+++ b/index.html
@@ -7,26 +7,23 @@
   <link rel="icon" href="SVG/voltranLogo2.svg" type="image/svg+xml">
 
   <title>Voltran Robotics</title>
-  <meta name="description" content="Voltran Robotics, Pertevniyal Lisesi'nin resmi robotik takımıdır. FRC ve VEX yarışmalarında geleceği inşa eden genç mühendisler, yazılımcılar ve liderler.">
-  <meta name="keywords" content="Voltran Robotics, robotik, yapay zeka, FRC, VEX Robotics, Pertevniyal Lisesi, teknoloji, mühendislik, yazılım">
-  <meta name="author" content="Voltran Robotics Team">
-  <meta name="robots" content="index, follow">
+  <meta name="title" content="Voltran Robotics" />
+  <meta name="description" content="Voltran Robotics, Pertevniyal Lisesi'nin resmi robotik takımıdır. FRC ve VEX yarışmalarında geleceği inşa eden genç mühendisler, yazılımcılar ve liderler." />
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://voltranrobotics.tech/" />
+  <meta property="og:title" content="Voltran Robotics" />
+  <meta property="og:description" content="Voltran Robotics, Pertevniyal Lisesi'nin resmi robotik takımıdır. FRC ve VEX yarışmalarında geleceği inşa eden genç mühendisler, yazılımcılar ve liderler." />
+  <meta property="og:image" content="SVG/voltranBanner.svg" />
+  
+  <!-- X (Twitter) -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://voltranrobotics.tech/" />
+  <meta property="twitter:title" content="Voltran Robotics" />
+  <meta property="twitter:description" content="Voltran Robotics, Pertevniyal Lisesi'nin resmi robotik takımıdır. FRC ve VEX yarışmalarında geleceği inşa eden genç mühendisler, yazılımcılar ve liderler." />
+  <meta property="twitter:image" content="SVG/voltranBanner.svg" />
 
-  <meta name="google-site-verification" content="9nYa0BeGYrJpy4SZK91Qef51Ss8kLaZqzyntGX7n58A">
-
-  <meta property="og:title" content="Voltran Robotics">
-  <meta property="og:description" content="Pertevniyal Lisesi'nin resmi robotik takımı Voltran Robotics, FRC ve VEX yarışmalarında geleceği inşa ediyor.">
-  <meta property="og:image" content="photos/photo18.png">
-  <meta property="og:url" content="https://voltranrobotics.tech">
-  <meta property="og:type" content="website">
-  <meta property="og:locale" content="tr_TR">
-
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Voltran Robotics | Pertevniyal Lisesi Robotik Takımı">
-  <meta name="twitter:description" content="Genç mühendisler ve yazılımcılarla geleceği inşa eden Voltran Robotics.">
-  <meta name="twitter:image" content="photos/photo18.png">
-
-  <link rel="icon" href="SVG/voltranLogo.svg" type="image/svg+xml">
   <link rel="stylesheet" href="style.css" />
   <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/build/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
