--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <img class="instagram" id="photo1" src="SVG/insta.svg" alt="Instagram Icon" draggable="false" />
               </a>
               <a href="https://www.instagram.com/voltranrobotics/" target="_blank" draggable="false">
-                <img class="instagram" id="photo2" src="SVG/photox.svg" alt="Instagram Icon" draggable="false" />
+                <img class="instagram" id="photo2" src="SVG/insta2.svg" alt="Instagram Icon" draggable="false" />
               </a>
             </div>
           </aside>
