Social Media area
html codes of social media area has added (by YusufCidik)

--- a/index.html
+++ b/index.html
@@ -396,48 +396,31 @@
             <p>voltranrobotics@gmail.com</p>
           </div>
 
-          <!-- Sosyal medya ikonları -->
           <div class="social-icons">
-            <a href="#" class="share twitter">
-              <svg role="presentation" class="svg--icon">
-                <use xlink:href="#svg--twitter" />
-              </svg>
-              <span class="clip">Twitter</span>
+            <!-- GitHub -->
+            <a href="https://github.com/team-7108" class="share github">
+              <img src="SVG/githubicon.svg" alt="GitHub" class="icon">
+              <span class="clip">GitHub</span>
             </a>
 
-            <a href="#" class="share google">
-              <svg role="presentation" class="svg--icon">
-                <use xlink:href="#svg--google" />
-              </svg>
-              <span class="clip">Google</span>
+            <!-- LinkedIn -->
+            <a href="https://www.linkedin.com/company/voltranrobotics/" class="share linkedin">
+              <img src="SVG/linkedinicon.svg" alt="LinkedIn" class="icon">
             </a>
 
-            <a href="#" class="share facebook">
-              <svg role="presentation" class="svg--icon">
-                <use xlink:href="#svg--facebook" />
-              </svg>
-              <span class="clip">Facebook</span>
+            <!-- Instagram -->
+            <a href="https://www.instagram.com/voltranrobotics/" class="share instagram">
+              <img src="SVG/instaicon.svg" alt="Instagram" class="icon">
             </a>
 
-            <a href="#" class="share github">
-              <svg role="presentation" class="svg--icon">
-                <use xlink:href="#svg--github" />
-              </svg>
-              <span class="clip">Github</span>
+            <!-- Facebook -->
+            <a href="https://www.facebook.com/volTRan7108/" class="share facebook">
+              <img src="SVG/facebookicon.svg" alt="Facebook" class="icon">
             </a>
 
-            <a href="#" class="share pinterest">
-              <svg role="presentation" class="svg--icon">
-                <use xlink:href="#svg--pinterest" />
-              </svg>
-              <span class="clip">Pinterest</span>
-            </a>
-
-            <a href="#" class="share youtube">
-              <svg role="presentation" class="svg--icon">
-                <use xlink:href="#svg--youtube" />
-              </svg>
-              <span class="clip">YouTube</span>
+            <!-- X (eski Twitter) -->
+            <a href="https://x.com/voltranrobotics" class="share x">
+              <img src="SVG/xicon.svg" alt="X" class="icon">
             </a>
           </div>
 
