--- a/index.html
+++ b/index.html
@@ -399,28 +399,28 @@
           <div class="social-icons">
             <!-- GitHub -->
             <a href="https://github.com/team-7108" class="share github">
-              <img src="SVG/githubicon.svg" alt="GitHub" class="icon">
+              <img src="SVG/githubicon.svg" alt="GitHub" class="icon" target="_blank">
               <span class="clip">GitHub</span>
             </a>
 
             <!-- LinkedIn -->
             <a href="https://www.linkedin.com/company/voltranrobotics/" class="share linkedin">
-              <img src="SVG/linkedinicon.svg" alt="LinkedIn" class="icon">
+              <img src="SVG/linkedinicon.svg" alt="LinkedIn" class="icon" target="_blank">
             </a>
 
             <!-- Instagram -->
             <a href="https://www.instagram.com/voltranrobotics/" class="share instagram">
-              <img src="SVG/instaicon.svg" alt="Instagram" class="icon">
+              <img src="SVG/instaicon.svg" alt="Instagram" class="icon" target="_blank">
             </a>
 
             <!-- Facebook -->
             <a href="https://www.facebook.com/volTRan7108/" class="share facebook">
-              <img src="SVG/facebookicon.svg" alt="Facebook" class="icon">
+              <img src="SVG/facebookicon.svg" alt="Facebook" class="icon" target="_blank">
             </a>
 
             <!-- X (eski Twitter) -->
             <a href="https://x.com/voltranrobotics" class="share x">
-              <img src="SVG/xicon.svg" alt="X" class="icon">
+              <img src="SVG/xicon.svg" alt="X" class="icon" target="_blank">
             </a>
           </div>
 
