--- a/index.html
+++ b/index.html
@@ -396,33 +396,34 @@
             <p>voltranrobotics@gmail.com</p>
           </div>
 
-          <!-- Sosyal media icons -->
-<div class="social-icons">
-  <!-- GitHub -->
-  <a href="https://github.com/team-7108" class="share github" target="_blank" rel="noopener noreferrer">
-    <img src="SVG/githubicon.svg" alt="GitHub" class="icon">
-  </a>
+          <!-- Sosyal medya ikonları -->
+          <div class="social-icons">
+            <!-- GitHub -->
+            <a href="https://github.com/team-7108" class="share github">
+              <img src="SVG/githubicon.svg" alt="GitHub" class="icon">
+            </a>
 
-  <!-- LinkedIn -->
-  <a href="https://www.linkedin.com/company/voltranrobotics/" class="share linkedin" target="_blank" rel="noopener noreferrer">
-    <img src="SVG/linkedinicon.svg" alt="LinkedIn" class="icon">
-  </a>
+            <!-- LinkedIn -->
+            <a href="https://www.linkedin.com/company/voltranrobotics/" class="share linkedin">
+              <img src="SVG/linkedinicon.svg" alt="LinkedIn" class="icon">
+            </a>
 
-  <!-- Instagram -->
-  <a href="https://www.instagram.com/voltranrobotics/" class="share instagram" target="_blank" rel="noopener noreferrer">
-    <img src="SVG/instaicon.svg" alt="Instagram" class="icon">
-  </a>
+            <!-- Instagram -->
+            <a href="https://www.instagram.com/voltranrobotics/" class="share instagram">
+              <img src="SVG/instaicon.svg" alt="Instagram" class="icon">
+            </a>
 
-  <!-- Facebook -->
-  <a href="https://www.facebook.com/volTRan7108/" class="share facebook" target="_blank" rel="noopener noreferrer">
-    <img src="SVG/facebookicon.svg" alt="Facebook" class="icon">
-  </a>
+            <!-- Facebook -->
+            <a href="https://www.facebook.com/volTRan7108/" class="share facebook">
+              <img src="SVG/facebookicon.svg" alt="Facebook" class="icon">
+            </a>
 
-  <!-- X (eski Twitter) -->
-  <a href="https://x.com/voltranrobotics" class="share x" target="_blank" rel="noopener noreferrer">
-    <img src="SVG/xicon.svg" alt="X" class="icon">
-  </a>
-</div>
+            <!-- X (eski Twitter) -->
+            <a href="https://x.com/voltranrobotics" class="share x">
+              <img src="SVG/xicon.svg" alt="X" class="icon">
+            </a>
+          </div>
+
 
 
           <p>Atatürk Bulvarı No1 34080 Fatih/İstanbul</p>
